--- a/Q2-featSelection.ipynb
+++ b/Q2-featSelection.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
+    "import re\n",
+    "import math\n",
     "train_dir = 'data/haiti/train'\n",
     "test_dir = 'data/haiti/dev'\n",
     "classes = os.listdir(train_dir)\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +70,21 @@
     "def count_vectorizer(docs, threshold):\n",
     "    word_freq = {}\n",
     "    # >>> YOUR ANSWER HERE\n",
-    "\n",
+    "    full_text = \"\".join(docs)\n",
+    "    words = re.split(r'[ \\n.,!?\":;()\\[\\]{}]+', full_text)\n",
+    "    words = [word.lower() for word in words if word]\n",
+    "    for word in words:\n",
+    "        if word in word_freq:\n",
+    "            word_freq[word] += 1\n",
+    "        else:\n",
+    "            word_freq[word] = 1\n",
     "    # >>> END YOUR ANSWER\n",
     "    return [word for word in word_freq if word_freq[word] > threshold]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,15 +95,25 @@
     "    vectorizer = CountVectorizer()\n",
     "    X = vectorizer.fit_transform(docs)\n",
     "    freq = X.toarray().sum(axis=0)\n",
-    "    words = vectorizer.get_feature_names_out()\n",
+    "    words = vectorizer.get_feature_names()\n",
     "    return [words[i] for i in range(len(words)) if freq[i] > threshold]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of the method using sklearn is: 0.8766666666666667\n",
+      "The accuracy of the method using your own method is: 0.8766666666666667\n",
+      "The difference between the two methods is: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# test the two methods by evaluating the performance on svm\n",
     "from sklearn.svm import SVC\n",
@@ -132,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +158,41 @@
     "def tfidf_vectorizer(docs, threshold):\n",
     "    word_freq = {}\n",
     "    # >>> YOUR ANSWER HERE\n",
-    "    \n",
+    "    TF = []\n",
+    "    words_count_in_document = {}\n",
+    "    m = len(docs)\n",
+    "    for sentence in docs:\n",
+    "        words = re.split(r'[ \\n.,!?\":;()\\[\\]{}-]+', sentence)\n",
+    "        words = [word.lower() for word in words if word]\n",
+    "        words_count_in_sentence = {}\n",
+    "        n = len(words)\n",
+    "        for word in words:\n",
+    "            if word in words_count_in_sentence:\n",
+    "                words_count_in_sentence[word] += 1 / n\n",
+    "            else:\n",
+    "                words_count_in_sentence[word] = 1 / n\n",
+    "                if word in words_count_in_document:\n",
+    "                    words_count_in_document[word] += 1\n",
+    "                else:\n",
+    "                    words_count_in_document[word] = 1\n",
+    "\n",
+    "        TF.append(words_count_in_sentence)\n",
+    "    IDF = {}\n",
+    "    for word, count in words_count_in_document.items():\n",
+    "        IDF[word] = math.log((m + 1) / (count + 1)) \n",
+    "    for s in TF:\n",
+    "        for word, freq in s.items():\n",
+    "            if word in word_freq:\n",
+    "                word_freq[word] += freq * (IDF[word] + 1)\n",
+    "            else:\n",
+    "                word_freq[word] = freq * (IDF[word] + 1)\n",
     "    # >>> END YOUR ANSWER\n",
     "    return [word for word in word_freq if word_freq[word] > threshold]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +203,25 @@
     "    vectorizer = TfidfVectorizer()\n",
     "    X = vectorizer.fit_transform(docs)\n",
     "    freq = X.toarray().sum(axis=0)\n",
-    "    words = vectorizer.get_feature_names_out()\n",
+    "    words = vectorizer.get_feature_names()\n",
     "    return [words[i] for i in range(len(words)) if freq[i] > threshold]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of the method using sklearn is: 0.8533333333333334\n",
+      "The accuracy of the method using your own method is: 0.8533333333333334\n",
+      "The difference between the two methods is: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# test the two methods by evaluating the performance on svm\n",
     "def evaluate_feature_selection_method_tfidf(train_set, test_set, method, threshold):\n",
@@ -193,7 +248,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
