result is lower than random classifier but do not know why

--- a/Q3-naiveBayes.ipynb
+++ b/Q3-naiveBayes.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,26 +28,29 @@
     "\"\"\"\n",
     "\n",
     "import os, math\n",
+    "import re\n",
+    "import numpy as np\n",
     "from collections import Counter\n",
+    "\n",
     "\n",
     "class NaiveBayesClassifier:\n",
     "    \"\"\"Code for a bag-of-words Naive Bayes classifier.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    def __init__(self, train_dir='data/haiti/train', REMOVE_STOPWORDS=False):\n",
     "        self.REMOVE_STOPWORDS = REMOVE_STOPWORDS\n",
     "        self.stopwords = set([l.strip() for l in open('data/english.stop')])\n",
     "        self.classes = os.listdir(train_dir)\n",
     "        self.train_data = {c: os.path.join(train_dir, c) for c in self.classes}\n",
-    "        self.vocabulary = set([])\n",
+    "        self.vocabulary = set()\n",
     "        self.logprior = {}\n",
-    "        self.loglikelihood = {} # keys should be tuples in the form (w, c)\n",
-    "        \n",
+    "        self.loglikelihood = {}  # keys should be tuples in the form (w, c)\n",
+    "\n",
     "    def train(self):\n",
     "        \"\"\"Train the Naive Bayes classification model, following the pseudocode for\n",
-    "        training given in Figure 4.2 of SLP Chapter 4 (https://web.stanford.edu/~jurafsky/slp3/4.pdf). \n",
+    "        training given in Figure 4.2 of SLP Chapter 4 (https://web.stanford.edu/~jurafsky/slp3/4.pdf).\n",
     "\n",
-    "        Note that self.train_data contains the paths to training data files. \n",
+    "        Note that self.train_data contains the paths to training data files.\n",
     "        To get all the documents for a given training class c in a list, you can use:\n",
     "            c_docs = open(self.train_data[c]).readlines()\n",
     "\n",
@@ -62,31 +65,61 @@
     "        will need to properly estimate the parameters of the model, and what intermediary\n",
     "        variables you will need in this function to store the results of your computations.\n",
     "\n",
-    "        Follow the TrainNaiveBayes pseudocode to update the relevant class variables: \n",
-    "            - self.vocabulary, self.logprior, and self.loglikelihood. \n",
-    "        \n",
-    "        Note that the keys for self.loglikelihood should be tuples in the form of (w, c) \n",
+    "        Follow the TrainNaiveBayes pseudocode to update the relevant class variables:\n",
+    "            - self.vocabulary, self.logprior, and self.loglikelihood.\n",
+    "\n",
+    "        Note that the keys for self.loglikelihood should be tuples in the form of (w, c)\n",
     "        where w is the string for the word and c is the string for the class.\n",
     "\n",
     "        Parameters\n",
     "        ----------\n",
     "        None (reads training data from self.train_data)\n",
-    "        \n",
+    "\n",
     "        Returns\n",
     "        -------\n",
     "        None (updates class attributes self.vocabulary, self.logprior, self.loglikelihood)\n",
     "        \"\"\"\n",
     "        # >>> YOUR ANSWER HERE\n",
+    "        p_class = []\n",
+    "        total_doc = 0\n",
+    "        counters = []\n",
+    "        total_word_in_class = []\n",
+    "        for c in self.classes:\n",
+    "            counter = Counter()\n",
+    "            total_word = 0\n",
+    "            c_docs = open(self.train_data[c]).readlines()\n",
+    "            p_class.append(len(c_docs))\n",
+    "            total_doc += len(c_docs)\n",
+    "            for doc in c_docs:\n",
+    "                words = re.split(r'[ \\n.,!?\":;()\\[\\]{}-]+', doc)\n",
+    "                if self.REMOVE_STOPWORDS:\n",
+    "                    words = [word.lower() for word in words\n",
+    "                             if word.isalnum() and word.lower() not in self.stopwords]\n",
+    "                else:\n",
+    "                    words = [word.lower() for word in words]\n",
+    "                for w in words:\n",
+    "                    if w == \"\":\n",
+    "                        continue\n",
+    "                    counter[w] += 1\n",
+    "                    total_word += 1\n",
+    "                    self.vocabulary.add(w)\n",
+    "            counters.append(counter)\n",
+    "            total_word_in_class.append(total_word)\n",
     "\n",
     "        # Calculate class priors\n",
-    "\n",
+    "        for i, c in enumerate(self.classes):\n",
+    "            self.logprior[c] = math.log(p_class[i] / total_doc)\n",
     "        # Calculate likelihoods\n",
+    "        for i, counter in enumerate(counters):\n",
+    "            for word, count in counter.items():\n",
+    "                self.loglikelihood[(word, self.classes[i])] = \\\n",
+    "                    math.log((count + 1.) / (total_word_in_class[i] + 1. * len(self.vocabulary)))\n",
     "\n",
     "        # >>> END YOUR ANSWER\n",
-    "        \n",
+    "\n",
     "    def score(self, doc, c):\n",
     "        \"\"\"Return the log-probability of a given document for a given class,\n",
-    "        using the trained Naive Bayes classifier. \n",
+    "        using the trained Naive Bayes classifier.\n",
     "\n",
     "        This is analogous to the inside of the for loop in the TestNaiveBayes\n",
     "        pseudocode in Figure 4.2, SLP Chapter 4 (https://web.stanford.edu/~jurafsky/slp3/4.pdf).\n",
@@ -102,11 +135,22 @@
     "        -------\n",
     "        float\n",
     "            The log-probability of the document under the model for class c.\n",
-    "        \"\"\"        \n",
+    "        \"\"\"\n",
     "        # >>> YOUR ANSWER HERE\n",
-    "        return 0.0\n",
+    "        words = re.split(r'[ \\n.,!?\":;()\\[\\]{}-]+', doc)\n",
+    "        if self.REMOVE_STOPWORDS:\n",
+    "            words = [word.lower() for word in words\n",
+    "                     if word.isalnum() and word.lower() not in self.stopwords]\n",
+    "        else:\n",
+    "            words = [word.lower() for word in words]\n",
+    "        log_p = self.logprior[c]\n",
+    "        for word in words:\n",
+    "            if word not in self.vocabulary or word == \"\" or (word, c) not in self.loglikelihood:\n",
+    "                continue\n",
+    "            log_p += self.loglikelihood[(word, c)]\n",
+    "        return log_p\n",
     "        # >>> END YOUR ANSWER\n",
-    "                \n",
+    "\n",
     "    def predict(self, doc):\n",
     "        \"\"\"Return the most likely class for a given document under the trained classifier model.\n",
     "        This should be only a few lines of code, and should make use of your self.score function.\n",
@@ -118,16 +162,23 @@
     "        ----------\n",
     "        doc : str\n",
     "            A text representation of a document to score.\n",
-    "        \n",
+    "\n",
     "        Returns\n",
     "        -------\n",
     "        str\n",
     "            The most likely class as predicted by the model.\n",
     "        \"\"\"\n",
     "        # >>> YOUR ANSWER HERE\n",
-    "        return predicted_class\n",
+    "        max_score = -100000\n",
+    "        pred = \"\"\n",
+    "        for c in self.classes:\n",
+    "            score = self.score(doc, c)\n",
+    "            if max_score < score:\n",
+    "                pred = c\n",
+    "            else:\n",
+    "                max_score = score\n",
+    "        return pred\n",
     "        # >>> END YOUR ANSWER\n",
-    "\n",
     "\n",
     "    def evaluate(self, test_dir='haiti/test', target='relevant'):\n",
     "        \"\"\"Calculate a precision, recall, and F1 score for the model\n",
@@ -145,14 +196,14 @@
     "        test_dir : str\n",
     "            The path to a directory containing the test data.\n",
     "        target : str\n",
-    "            The name of the class to calculate relative to. \n",
+    "            The name of the class to calculate relative to.\n",
     "\n",
     "        Returns\n",
     "        -------\n",
     "        (float, float, float)\n",
     "            The model's precision, recall, and F1 score relative to the\n",
     "            target class.\n",
-    "        \"\"\"        \n",
+    "        \"\"\"\n",
     "        test_data = {c: os.path.join(test_dir, c) for c in self.classes}\n",
     "        if not target in test_data:\n",
     "            print('Error: target class does not exist in test data.')\n",
@@ -160,26 +211,43 @@
     "        outcomes = {'TP': 0, 'TN': 0, 'FP': 0, 'FN': 0}\n",
     "        # >>> YOUR ANSWER HERE\n",
     "        # Calculate outcomes\n",
-    "\n",
+    "        for c in self.classes:\n",
+    "            if c == target:\n",
+    "                docs = open(test_data[c]).readlines()\n",
+    "                for doc in docs:\n",
+    "                    pred_c = self.predict(doc)\n",
+    "                    if pred_c == c:\n",
+    "                        outcomes['TP'] += 1\n",
+    "                    else:\n",
+    "                        outcomes['FN'] += 1\n",
+    "            else:\n",
+    "                docs = open(test_data[c]).readlines()\n",
+    "                for doc in docs:\n",
+    "                    pred_c = self.predict(doc)\n",
+    "                    if pred_c == c:\n",
+    "                        outcomes['TN'] += 1\n",
+    "                    else:\n",
+    "                        outcomes['FP'] += 1\n",
     "        # calculate precision, recall, and F1 score\n",
-    "\n",
+    "        precision = outcomes['TP'] / (outcomes['TP'] + outcomes['FP'])\n",
+    "        recall = outcomes['TP'] / (outcomes['TP'] + outcomes['FN'])\n",
+    "        f1_score = 2 * (precision * recall) / (recall + precision)\n",
     "        # >>> END YOUR ANSWER\n",
     "        return (precision, recall, f1_score)\n",
-    "\n",
     "\n",
     "    def print_top_features(self, k=10):\n",
     "        results = {c: {} for c in self.classes}\n",
     "        for w in self.vocabulary:\n",
     "            for c in self.classes:\n",
-    "                ratio = math.exp(self.loglikelihood[w, c] - min(self.loglikelihood[w, other_c] for other_c in self.classes if other_c != c) )\n",
+    "                ratio = math.exp(self.loglikelihood[w, c] - min(\n",
+    "                    self.loglikelihood[w, other_c] for other_c in self.classes if other_c != c))\n",
     "                results[c][w] = ratio\n",
     "\n",
     "        for c in self.classes:\n",
     "            print(f'Top features for class <{c.upper()}>')\n",
-    "            for w, ratio in sorted(results[c].items(), key = lambda x: x[1], reverse=True)[0:k]:\n",
+    "            for w, ratio in sorted(results[c].items(), key=lambda x: x[1], reverse=True)[0:k]:\n",
     "                print(f'\\t{w}\\t{ratio}')\n",
-    "            print('')\n",
-    "            "
+    "            print('')"
    ]
   },
   {
@@ -191,9 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performance on class <RELEVANT>, keeping stopwords\n",
+      "\tPrecision: 0.6266666666666667\t Recall: 1.0\t F1: 0.7704918032786886\n",
+      "\n",
+      "Performance on class <RELEVANT>, removing stopwords\n",
+      "\tPrecision: 0.6266666666666667\t Recall: 1.0\t F1: 0.7704918032786886\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "('exipred', 'relevant')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19800/2233575104.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_top_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19800/3220711897.py\u001b[0m in \u001b[0;36mprint_top_features\u001b[1;34m(self, k)\u001b[0m\n\u001b[0;32m    218\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    219\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 220\u001b[1;33m                 ratio = math.exp(self.loglikelihood[w, c] - min(\n\u001b[0m\u001b[0;32m    221\u001b[0m                     self.loglikelihood[w, other_c] for other_c in self.classes if other_c != c))\n\u001b[0;32m    222\u001b[0m                 \u001b[0mresults\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mratio\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19800/3220711897.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    219\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    220\u001b[0m                 ratio = math.exp(self.loglikelihood[w, c] - min(\n\u001b[1;32m--> 221\u001b[1;33m                     self.loglikelihood[w, other_c] for other_c in self.classes if other_c != c))\n\u001b[0m\u001b[0;32m    222\u001b[0m                 \u001b[0mresults\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mratio\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    223\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: ('exipred', 'relevant')"
+     ]
+    }
+   ],
    "source": [
     "target = 'relevant'\n",
     "\n",
@@ -212,11 +306,18 @@
     "\n",
     "clf.print_top_features()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
