--- a/Q3-naiveBayes.ipynb
+++ b/Q3-naiveBayes.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "                    words = [word.lower() for word in words\n",
     "                             if word.isalnum() and word.lower() not in self.stopwords]\n",
     "                else:\n",
-    "                    words = [word.lower() for word in words]\n",
+    "                    words = [word.lower() for word in words if word.isalnum()]\n",
     "                for w in words:\n",
     "                    if w == \"\":\n",
     "                        continue\n",
@@ -111,6 +111,8 @@
     "            self.logprior[c] = math.log(p_class[i] / total_doc)\n",
     "        # Calculate likelihoods\n",
     "        for i, counter in enumerate(counters):\n",
+    "            for word in self.vocabulary:\n",
+    "                self.loglikelihood[(word, self.classes[i])] = math.log(1. / len(self.vocabulary))\n",
     "            for word, count in counter.items():\n",
     "                self.loglikelihood[(word, self.classes[i])] = \\\n",
     "                    math.log((count + 1.) / (total_word_in_class[i] + 1. * len(self.vocabulary)))\n",
@@ -142,12 +144,12 @@
     "            words = [word.lower() for word in words\n",
     "                     if word.isalnum() and word.lower() not in self.stopwords]\n",
     "        else:\n",
-    "            words = [word.lower() for word in words]\n",
+    "            words = [word.lower() for word in words if word.isalnum()]\n",
     "        log_p = self.logprior[c]\n",
     "        for word in words:\n",
     "            if word not in self.vocabulary or word == \"\" or (word, c) not in self.loglikelihood:\n",
     "                continue\n",
-    "            log_p += self.loglikelihood[(word, c)]\n",
+    "            log_p += self.loglikelihood[word, c]\n",
     "        return log_p\n",
     "        # >>> END YOUR ANSWER\n",
     "\n",
@@ -175,8 +177,8 @@
     "            score = self.score(doc, c)\n",
     "            if max_score < score:\n",
     "                pred = c\n",
-    "            else:\n",
     "                max_score = score\n",
+    "\n",
     "        return pred\n",
     "        # >>> END YOUR ANSWER\n",
     "\n",
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,24 +269,35 @@
      "output_type": "stream",
      "text": [
       "Performance on class <RELEVANT>, keeping stopwords\n",
-      "\tPrecision: 0.6266666666666667\t Recall: 1.0\t F1: 0.7704918032786886\n",
+      "\tPrecision: 0.8082191780821918\t Recall: 0.9414893617021277\t F1: 0.8697788697788698\n",
       "\n",
       "Performance on class <RELEVANT>, removing stopwords\n",
-      "\tPrecision: 0.6266666666666667\t Recall: 1.0\t F1: 0.7704918032786886\n",
+      "\tPrecision: 0.7860262008733624\t Recall: 0.9574468085106383\t F1: 0.8633093525179856\n",
+      "\n",
+      "Top features for class <IRRELEVANT>\n",
+      "\tnotes\t14.016793595000978\n",
+      "\tjob\t9.944346807264209\n",
+      "\tnews\t7.576645186487014\n",
+      "\ttranslate\t7.153680921694979\n",
+      "\tback\t6.945258087613088\n",
+      "\tcry\t6.629564538176137\n",
+      "\tsenegal\t6.629564538176137\n",
+      "\twrite\t6.629564538176137\n",
+      "\tlove\t6.603397773872288\n",
+      "\tvisa\t5.682483889865262\n",
+      "\n",
+      "Top features for class <RELEVANT>\n",
+      "\tfood\t27.980721649484543\n",
+      "\thungry\t26.43690721649484\n",
+      "\thunger\t19.464536082474222\n",
+      "\ttents\t13.944742268041237\n",
+      "\taid\t12.492164948453604\n",
+      "\tdying\t12.20164948453608\n",
+      "\twater\t10.822731958762889\n",
+      "\tearthquake\t10.168041237113398\n",
+      "\ttent\t9.296494845360822\n",
+      "\tcarrefour\t8.974948453608242\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "('exipred', 'relevant')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19800/2233575104.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_top_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19800/3220711897.py\u001b[0m in \u001b[0;36mprint_top_features\u001b[1;34m(self, k)\u001b[0m\n\u001b[0;32m    218\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    219\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 220\u001b[1;33m                 ratio = math.exp(self.loglikelihood[w, c] - min(\n\u001b[0m\u001b[0;32m    221\u001b[0m                     self.loglikelihood[w, other_c] for other_c in self.classes if other_c != c))\n\u001b[0;32m    222\u001b[0m                 \u001b[0mresults\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mratio\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19800/3220711897.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    219\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    220\u001b[0m                 ratio = math.exp(self.loglikelihood[w, c] - min(\n\u001b[1;32m--> 221\u001b[1;33m                     self.loglikelihood[w, other_c] for other_c in self.classes if other_c != c))\n\u001b[0m\u001b[0;32m    222\u001b[0m                 \u001b[0mresults\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mratio\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    223\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: ('exipred', 'relevant')"
      ]
     }
    ],
