svm and resnet+svm with report

--- a/Q5-svm.ipynb
+++ b/Q5-svm.ipynb
@@ -8,7 +8,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "3Gf1badl3V1R"
@@ -28,7 +27,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "eU07Yq3U3V1X"
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -48,7 +46,22 @@
     "id": "KRT9brgw3V1X",
     "outputId": "630a303f-9b73-45a5-c3b8-55336291c5cc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "Training set:\n",
+      "  data shape: torch.Size([50000, 32, 32, 3])\n",
+      "  labels shape:  torch.Size([50000])\n",
+      "Test set:\n",
+      "  data shape:  torch.Size([10000, 32, 32, 3])\n",
+      "  labels shape torch.Size([10000])\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchvision.datasets as datasets\n",
@@ -71,7 +84,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "IHb69hMm3V1Z"
@@ -83,9 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50000, 128)\n"
+     ]
+    }
+   ],
    "source": [
     "#################################################################################################################\n",
     "# TODO:                                                                                                         #\n",
@@ -107,11 +127,12 @@
     "\n",
     "X_train_feat = pca.fit_transform(X_train.reshape(num_train, -1))\n",
     "X_test_feat = pca.transform(X_test.reshape(num_test, -1))\n",
-    "# ***** END OF YOUR CODE *****"
+    "# ***** END OF YOUR CODE *****\n",
+    "\n",
+    "print(X_train_feat.shape)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -156,8 +177,8 @@
     "# *****START OF YOUR CODE *****\n",
     "\n",
     "# Create a svm instance and Train the svm instance svc with the training set samples 'X_train_feat' and labels 'y_train' as input\n",
-    "svc = \n",
-    "\n",
+    "svc = svm.SVC(kernel='linear')\n",
+    "svc.fit(X_train_feat, y_train)\n",
     "# *****END OF YOUR CODE *****\n",
     "\n",
     "\n",
@@ -170,8 +191,7 @@
     "# ***** START OF YOUR CODE *****\n",
     "\n",
     "# Test our trained svm instance svc with the test set samples 'X_test_feat'\n",
-    "y2_pred =\n",
-    "\n",
+    "y2_pred = svc.predict(X_test_feat)\n",
     "# ***** END OF YOUR CODE *****\n",
     "\n",
     "# Print the predicted outputs and accuracies.\n",
@@ -183,7 +203,175 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Better Feature Extraction\n",
+    "In order to get better testing result, I will use pretrain resnet34 as the main feature extraction method to obtain the feature.And then I will use the SVM to complete the classify task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torchvision import datasets, transforms, models\n",
+    "from torch.utils.data import DataLoader\n",
+    "from sklearn.svm import SVC\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/resnet34-b627a593.pth\" to C:\\Users\\23629/.cache\\torch\\hub\\checkpoints\\resnet34-b627a593.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c45b4cc89f464a00b9bdc25c0398a859",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0.00/83.3M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "batch_size = 64\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "cifar_trainset = datasets.CIFAR10(root='./dataset', train=True, download=False, transform=transform)\n",
+    "cifar_testset = datasets.CIFAR10(root='./dataset', train=False, download=False, transform=transform)\n",
+    "\n",
+    "train_loader = DataLoader(cifar_trainset, batch_size=batch_size, shuffle=False)\n",
+    "test_loader = DataLoader(cifar_testset, batch_size=batch_size, shuffle=False)\n",
+    "\n",
+    "# Use pretrain resnet 34 to extract image feature\n",
+    "model = models.resnet34(weights=models.ResNet34_Weights.DEFAULT)\n",
+    "model.fc = nn.Identity()\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 782/782 [28:17<00:00,  2.17s/it]\n",
+      "Processing: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 157/157 [03:18<00:00,  1.27s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50000, 512)\n",
+      "(50000,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_features(model, loader):\n",
+    "    model.eval()\n",
+    "    features = []\n",
+    "    labels = []\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, targets in tqdm(loader,\"Processing: \"):\n",
+    "            outputs = model(inputs)\n",
+    "            features.append(outputs)\n",
+    "            labels.append(targets)\n",
+    "    features = torch.cat(features, dim=0)\n",
+    "    labels = torch.cat(labels, dim=0)\n",
+    "    return features.numpy(), labels.numpy()\n",
+    "\n",
+    "# Obtain the image featrue of train and test dataset \n",
+    "X_train_feat, y_train = extract_features(model, train_loader)\n",
+    "X_test_feat, y_test = extract_features(model, test_loader)\n",
+    "print(X_train_feat.shape)\n",
+    "print(y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.91      0.89      1000\n",
+      "           1       0.93      0.94      0.94      1000\n",
+      "           2       0.82      0.84      0.83      1000\n",
+      "           3       0.77      0.81      0.79      1000\n",
+      "           4       0.84      0.85      0.84      1000\n",
+      "           5       0.86      0.85      0.86      1000\n",
+      "           6       0.92      0.88      0.90      1000\n",
+      "           7       0.92      0.89      0.90      1000\n",
+      "           8       0.94      0.93      0.94      1000\n",
+      "           9       0.94      0.91      0.93      1000\n",
+      "\n",
+      "    accuracy                           0.88     10000\n",
+      "   macro avg       0.88      0.88      0.88     10000\n",
+      "weighted avg       0.88      0.88      0.88     10000\n",
+      "\n",
+      "time consumption: 191.0444619655609\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use SVM to classify \n",
+    "import time\n",
+    "start_time = time.time()\n",
+    "\n",
+    "svm = SVC(kernel='linear')\n",
+    "svm.fit(X_train_feat, y_train)\n",
+    "\n",
+    "# test SVM\n",
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_test, svm.predict(X_test_feat)))\n",
+    "print(\"time consumption:\",time.time() - start_time)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -195,6 +383,32 @@
     "\n",
     "###############################################################################"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- For the PCA+SVM approach, it can project complex high-dimensional data into a low-dimensional space, thereby achieving a certain degree of class separation. However, since PCA reduces dimensionality by identifying the principal directions of data distribution while paying less attention to intra-class compactness and inter-class separability, the differences between different categories become less distinct after projection. This, in turn, leads to poor classification performance by SVM. To address this issue, I further enhanced the process by extracting information from different channels and positions of the images, while maximizing the feature distances between different categories. For this purpose, I chose to use the ResNet series for feature extraction.\n",
+    "\n",
+    "- ResNet introduces skip connections combined with convolutional layers, enabling the network to transform input image data into high-quality flat vectors before the final fully connected (fc) layer. At the same time, it ensures that these vectors maximize the inter-class distances in the feature space. Considering that the final testing process needs to be completed in a CPU environment within a one-hour time limit, using a small pre-trained model is essential. \n",
+    "\n",
+    "- During the experiment, I tested two different ResNet models: ResNet18 and ResNet34:\n",
+    "    - ResNet18: Due to its smaller size, ResNet18 was insufficient in extracting features from the input images, leading to slightly lower classification performance when fed into the SVM compared to ResNet34.\n",
+    "    - ResNet34: ResNet34, with its stronger feature extraction capabilities, performed better. I removed the model's fc layer and directly fed the extracted feature vectors into the SVM for classification. To ensure proper feature extraction, I resized the input images to 224×224.\n",
+    "\n",
+    "- It is worth noting that, to ensure the ResNet model extracts features correctly, I resized the input images to 224×224. Finally, after approximately one hour of runtime, I achieved an 88% classification accuracy on the CIFAR-10 dataset, which meets the expected results.\n",
+    "\n",
+    "**Data Analysis**  \n",
+    "- The experimental results show that the model based on ResNet34 feature extraction and SVM classifier achieves an overall accuracy of 88% on the CIFAR-10 dataset, and the performance is relatively stable. For example, the f1-score of categories 1, 8 and 9 reached 0.94, 0.94 and 0.93 respectively, indicating that the feature extraction of these categories was clear and the classification was accurate.  \n",
+    "\n",
+    "- However, for category 3, its precision is only 0.77, the lowest of all categories, which means that this kind of category may have some similarity with the other categories, leading to confusion in the classifier. Such issues could potentially be resolved by using larger models, such as ResNet50 or ResNet101, which are capable of extracting more comprehensive features and improving classification performance. However, due to limitations in hardware and time, the final classification accuracy is somewhat affected. \n",
+    "\n",
+    "- In addition, the running time in CPU environment is: \n",
+    "    - Feature extraction: 1895 seconds (31.6 min)\n",
+    "    - SVM process: 191 seconds (3.2 min)  \n",
+    "\n",
+    "- Overall, by combining deep learning and traditional machine learning methods, the model balances the quality of feature extraction and the computational cost, achieving a good classification effect, but there is still room for improvement in the ability to distinguish individual category"
+   ]
   }
  ],
  "metadata": {
@@ -205,7 +419,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "arin7102_ass1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
