--- a/Q5-svm.ipynb
+++ b/Q5-svm.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -157,7 +157,31 @@
     "id": "k2vd7yfY3V1a",
     "outputId": "471db747-76f8-4c80-9152-ca84630f91dd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.46      0.50      0.48      1000\n",
+      "           1       0.46      0.49      0.48      1000\n",
+      "           2       0.31      0.30      0.30      1000\n",
+      "           3       0.32      0.32      0.32      1000\n",
+      "           4       0.36      0.28      0.31      1000\n",
+      "           5       0.34      0.32      0.33      1000\n",
+      "           6       0.42      0.50      0.46      1000\n",
+      "           7       0.47      0.43      0.45      1000\n",
+      "           8       0.51      0.53      0.52      1000\n",
+      "           9       0.46      0.48      0.47      1000\n",
+      "\n",
+      "    accuracy                           0.41     10000\n",
+      "   macro avg       0.41      0.41      0.41     10000\n",
+      "weighted avg       0.41      0.41      0.41     10000\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import svm\n",
     "\n",
